--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,7 +1,7 @@
-@import "./easyadmin-theme/variables.css";
-@import "./easyadmin-theme/variables.scss";
+//@import "./easyadmin-theme/variables.css";
+//@import "./easyadmin-theme/variables.scss";
 
-@import "~bootstrap/scss/bootstrap";
+//@import "~bootstrap/scss/bootstrap";
 
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import "~@fortawesome/fontawesome-free/css/v4-shims.css";
