--- a/src/Resources/views/crud/action.html.twig
+++ b/src/Resources/views/crud/action.html.twig
@@ -5,13 +5,13 @@
     <a class="{{ isIncludedInDropdown|default(false) ? 'dropdown-item' }} {{ action.cssClass }}"
        href="{{ action.linkUrl }}"
        {% for name, value in action.htmlAttributes %}{{ name }}="{{ value|e('html_attr') }}" {% endfor %}>
-        {%- if action.icon %}<i class="action-icon {{ action.icon }}"></i> {% endif -%}
+        {%- if action.icon %}<i class="icon action-icon {{ isIncludedInDropdown|default(false) ? 'dropdown-item-icon' }} {{ action.icon }}"></i> {% endif -%}
         {%- if action.label is not empty -%}{{ action.label }}{%- endif -%}
     </a>
 {% elseif 'button' == action.htmlElement %}
     <button class="{{ action.cssClass }}" {% for name, value in action.htmlAttributes %}{{ name }}="{{ value|e('html_attr') }}" {% endfor %}>
         <span class="btn-label">
-            {%- if action.icon %}<i class="action-icon {{ action.icon }}"></i> {% endif -%}
+            {%- if action.icon %}<i class="icon action-icon {{ action.icon }}"></i> {% endif -%}
             {%- if action.label is not empty -%}{{ action.label }}{%- endif -%}
         </span>
     </button>
