--- a/src/Resources/views/menu.html.twig
+++ b/src/Resources/views/menu.html.twig
@@ -1,41 +1,66 @@
 {# @var ea \EasyCorp\Bundle\EasyAdminBundle\Context\AdminContext #}
+<div class="collapse navbar-collapse" id="navbar-menu">
+    {% block main_menu_before %}{% endblock %}
+
+    <ul class="navbar-nav pt-lg-3">
+        {% block main_menu %}
+            {% for menuItem in ea.mainMenu.items %}
+                {% block menu_item %}
+                    <li class="nav-item {{ menuItem.isMenuSection ? 'ea-nav-header nav-link' }} {{ menuItem.hasSubItems ? 'dropdown' }} {{ ea.mainMenu.isSelected(menuItem) ? 'active' }}">
+                        {{ _self.render_menu_item(menuItem) }}
+
+                        {% if menuItem.hasSubItems %}
+                            <div class="dropdown-menu">
+                                <div class="dropdown-menu-columns">
+                                    <div class="dropdown-menu-column">
+                                        {% for menuSubItem in menuItem.subItems %}
+                                            {% block menu_subitem %}
+                                                {{ _self.render_menu_subitem(menuSubItem) }}
+                                            {% endblock menu_subitem %}
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+                        {% endif %}
+                    </li>
+                {% endblock menu_item %}
+            {% endfor %}
+        {% endblock main_menu %}
+    </ul>
+
+    {% block main_menu_after %}{% endblock %}
+</div>
+
 {% macro render_menu_item(item) %}
     {% if item.isMenuSection %}
-        {% if item.icon is not empty %}<i class="menu-icon fa-fw {{ item.icon }}"></i>{% endif %}
+        {% if item.icon is not empty %}
+            <span class="nav-link-icon d-md-none d-lg-inline-block">
+                <i class="menu-icon fa-fw {{ item.icon }}"></i>
+            </span>
+        {% endif %}
+
         <span class="{{ item.cssClass }}">{{ item.label }}</span>
     {% else %}
-        <a href="{{ item.linkUrl }}" class="{{ item.cssClass }}" target="{{ item.linkTarget }}" rel="{{ item.linkRel }}" referrerpolicy="origin-when-cross-origin">
-            {% if item.icon is not empty %}<i class="menu-icon fa-fw {{ item.icon }}"></i>{% endif %}
-            <span>{{ item.label|raw }}</span>
-            {% if item.hasSubItems %}<i class="fa fa-fw fa-angle-right treeview-icon"></i>{% endif %}
+        <a href="{{ item.linkUrl }}" class="nav-link {{ item.cssClass }}" target="{{ item.linkTarget }}" rel="{{ item.linkRel }}" referrerpolicy="origin-when-cross-origin">
+            {% if item.icon is not empty %}
+                <span class="nav-link-icon d-md-none d-lg-inline-block">
+                    <i class="menu-icon fa-fw {{ item.icon }}"></i>
+                </span>
+            {% endif %}
+
+            <span class="nav-link-title">{{ item.label|raw }}</span>
         </a>
     {% endif %}
 {% endmacro %}
 
-{% block main_menu_before %}{% endblock %}
+{% macro render_menu_subitem(subitem) %}
+    <a href="{{ subitem.linkUrl }}" class="nav-link {{ subitem.cssClass }}" target="{{ subitem.linkTarget }}" rel="{{ subitem.linkRel }}" referrerpolicy="origin-when-cross-origin">
+        {% if subitem.icon is not empty %}
+            <span class="nav-link-icon d-md-none d-lg-inline-block">
+                <i class="menu-icon fa-fw {{ subitem.icon }}"></i>
+            </span>
+        {% endif %}
 
-<ul class="sidebar-menu" data-widget="tree" data-animation-speed="250">
-    {% block main_menu %}
-        {% for menuItem in ea.mainMenu.items %}
-            {% block menu_item %}
-                <li class="{{ menuItem.isMenuSection ? 'header' }} {{ menuItem.hasSubItems ? 'treeview' }} {{ ea.mainMenu.isSelected(menuItem) ? 'active' }} {{ ea.mainMenu.isExpanded(menuItem) ? 'active submenu-active' }}">
-                    {{ _self.render_menu_item(menuItem) }}
-
-                    {% if menuItem.hasSubItems %}
-                        <ul class="treeview-menu">
-                            {% for menuSubItem in menuItem.subItems %}
-                                {% block menu_subitem %}
-                                    <li class="{{ menuSubItem.isMenuSection ? 'header' }} {{ ea.mainMenu.isSelected(menuSubItem) ? 'active' }}">
-                                        {{ _self.render_menu_item(menuSubItem) }}
-                                    </li>
-                                {% endblock menu_subitem %}
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
-                </li>
-            {% endblock menu_item %}
-        {% endfor %}
-    {% endblock main_menu %}
-</ul>
-
-{% block main_menu_after %}{% endblock %}
+        <span class="nav-link-title">{{ subitem.label|raw }}</span>
+    </a>
+{% endmacro %}
