--- a/src/Resources/views/crud/field/image.html.twig
+++ b/src/Resources/views/crud/field/image.html.twig
@@ -3,9 +3,16 @@
 {# @var entity \EasyCorp\Bundle\EasyAdminBundle\Dto\EntityDto #}
 {% set html_id = 'ea-lightbox-' ~ field.uniqueId %}
 <a href="#" class="ea-lightbox-thumbnail" data-featherlight="#{{ html_id }}" data-featherlight-close-on-click="anywhere">
-    <img src="{{ asset(field.formattedValue) }}" class="img-fluid">
+    <img loading="lazy" src="{{ asset(field.formattedValue) }}" class="img-fluid">
 </a>
 
 <div id="{{ html_id }}" class="ea-lightbox">
-    <img src="{{ asset(field.formattedValue) }}">
+    <img
+        src="{{ data_uri_thumbnail(field.formattedValue, 100, 50) }}"
+        data-controller="@symfony/ux-lazy-image/lazy-image"
+        data-hd-src="{{ asset(field.formattedValue) }}"
+        loading="lazy"
+        width="100"
+        height="50"
+    />
 </div>
